Logo fix for cordova

--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -63,14 +63,14 @@
                 &.crossroads {
                     width: 30%;
                     &.logo {
-                        background-image: url(/assets/images/crossroads_logo.png);
+                        background-image: url("assets/images/crossroads_logo.png");
                     }
                 }
 
                 &.jockey_club {
                     width: 60%;
                     &.logo {
-                        background-image: url(/assets/images/jockey_club_logo.png);
+                        background-image: url("assets/images/jockey_club_logo.png");
                     }
                 }
             }
