--- a/app/templates/components/logo-banner.hbs
+++ b/app/templates/components/logo-banner.hbs
@@ -5,8 +5,12 @@
             <div class="contributor jockey_club"> {{ t "banner.funded_by" }} </div>
         </div>
         <div class="contributors logos">
-            <div class="contributor logo crossroads {{if isCordova "cordova" }}"></div>
-            <div class="contributor logo jockey_club {{if isCordova "cordova" }}"></div>
+            <div class="contributor crossroads">
+                <img class="static-image" src="assets/images/crossroads_logo.png" />
+            </div>
+            <div class="contributor jockey_club">
+                <img class="static-image" src="assets/images/jockey_club_logo.png" />
+            </div>
         </div>
     </div>
 </div>
