--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -32,7 +32,7 @@
                   <div class="small-12 medium-8 columns">
                       <span class="prefix">+852</span>
                       {{numeric-input classNames="number_input" value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
-                      <div class="small-12 columns input-error warning_empty">
+                      <div class="small-12 columns input-error warning_empty login">
                         {{fa-icon "warning"}}&nbsp;&nbsp;{{t "login.mobile_warning"}}
                       </div>
                   </div>
