Overflowing texts on home page

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -10,7 +10,7 @@
             {{/link-to}}
         </div>
 
-        <div class="responsive_container">
+        <div class="responsive_container home_section">
             <!-- Browse button -->
             <div class="home_section">
                 <div class="section_title"> {{ t "home.order_goods.title" }} </div>
@@ -50,7 +50,6 @@
             <div class="section_title"> {{ t "home.user_guide_title" }} </div>
 
             <div class="responsive_container">
-
                 <!-- How to browse -->
                 <div>
                     <div class="section_text small">
