--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -9,7 +9,7 @@
             margin-top: 30px;
             margin-bottom: 30px;
             .content {
-                width: 50%;
+                max-width: 700px;
             }
         }
     }
