--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -1,15 +1,19 @@
 .home_page {
-  
+
   .scroller {
     height: 93vh;
     overflow-y: auto;
     padding-bottom: 8rem;
   
     @media #{$medium-up} {
+      margin-left: -10rem;
+      padding-left: 10rem;
+      padding-right: 10rem;
+
       /**
-            * On desktop, show items side by side
-            * instead of on top of each otherds
-            */
+        * On desktop, show items side by side
+        * instead of on top of each otherds
+        */
       .responsive_container {
         display: flex;
 
@@ -18,6 +22,14 @@
           float: left;
           width: 100%;
         }
+
+        &.home_section {
+          border-bottom: 1px solid #334f75;
+          >div {
+            border-bottom: none;
+          }
+        }
+
       }
     }
 
@@ -44,10 +56,16 @@
 
       .section_text {
         text-align: left;
-        padding-left: 0.5rem;
+        padding-left: 2rem;
         padding-right: 0.5rem;
+        margin: 0 auto;
         margin-bottom: 1rem;
         margin-top: 1rem;
+        max-width: 30rem;
+
+        @media #{$medium-up} {
+          padding-left: 4rem;
+        }
 
         .step {
           @extend .small;
@@ -71,10 +89,9 @@
 
       .button {
         &.action {
-          width: 60%;
           white-space: nowrap;
-          padding-left: 0px;
-          padding-right: 0px;
+          padding-left: 2rem;
+          padding-right: 2rem;
           text-transform: uppercase;
           margin-top: 1rem;
           .fa {
