Css error fix and indentation fix

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -111,7 +111,7 @@ $sidebar-width: 7.8rem;
   }
 }
 .inner-wrap {
-  width: auto%;
+  width: auto;
   @media #{$small-only}{
     width: 100% !important;
   }
