--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -20,10 +20,10 @@
           <div class="mobile center_align">
             <div class="row">
               <div class="small-12 columns">
-               <label class="form-label">{{t "account.welcome"}}</label>
+                <label class="form-label">{{t "account.welcome"}}</label>
               </div>
               <div class="small-12 columns">
-               <label class="form-label">{{t "account.contact_details"}}</label>
+                <label class="form-label">{{t "account.contact_details"}}</label>
               </div>
             </div>
 
@@ -58,7 +58,7 @@
                       content=titles
                       on-change=(action (mut selectedTitle))
                       selectedValue=selectedTitle
-                      value= userTitle
+                      value= selectedTitle
                       selectArrow=true
                       classNames='condition'
                       idNames='title' }}
