--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -4,7 +4,7 @@
 
       <nav class="tab-bar">
         <section class="left-small">
-          {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
+          {{#link-to "browse" classNames="back"}}{{t "back"}}{{/link-to}}
         </section>
 
         <section class="middle tab-bar-section">
