--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -11,7 +11,7 @@
         {{small-cart-toggle-view}}
 
         <div class="small-12 columns mobile">
-          {{#validatable-form onSubmit=(action 'authenticateUser') as |form|}}
+          {{#validatable-form onSubmit=(action 'authenticateUser' bookAppointment) as |form|}}
 
             <div class="row">
               <div class="small-12 columns">
