Browse page CSS fixes

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -196,7 +196,7 @@ $sidebar-width: 7.8rem;
     -ms-transform: none;
     -o-transform: none;
     transform: none;
-    margin-right: 10rem;
+    margin-right: 5%;
   }
   .exit-off-canvas {
     background: rgba(0, 35, 89, 0.2);
