host_url added according to environment | test case added

--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -73,9 +73,9 @@
           {{#each allPackages key="@index" as |package|}}
             <div class="item_name">{{package.notes}}</div>
             <p>
-              {{#if isCharityUser}}
-                <div class="item_details" {{ action 'gotoStockItem' package.id }}>
-                  {{t "itemdetail.inventory"}}: <span class="inventory_redirect">{{package.inventoryNumber}}</span>
+              {{#if isOrderFulfilmentUser}}
+                <div class="item_details" {{ action 'goToStockItem' package.id }}>
+                  {{t "itemdetail.inventory_number"}}: <span class="inventory_redirect">{{package.inventoryNumber}}</span>
                 </div>
               {{/if}}
               <div class="item_details">
