request purpose page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,6 +19,7 @@
 @import "foundation_large";
 @import "search";
 @import "account_details";
+@import "request_purpose";
 
 @import "templates/home";
 @import "templates/loading";
