client information page

--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -17,69 +17,68 @@
 </div>
 
 
-  <section class="main-section request-purpose">
-    {{#validatable-form onSubmit=(action 'saveItem') as |form|}}
-        <div class="small-12 medium-9 large-9 columns">
-          Purpose of Goods
-        </div>
-        <div class="row time_inputs purpose" >
-
-          <div class=" custom_radio_buttons small-12 columns purpose" for="For organisation's own purpose">
-              {{radio-button
-              name='organisations_own_purpose'
-              id="own"
-              value="own"
-              checked=true
-              selection=selectedId
-              required='true'}}
-            <label class="radio-button-text align-text">
-              For organisation's own programs
-            </label>
-          </div>
-
-          <div class=" custom_radio_buttons small-12 columns purpose end" for="For organisation's own purpose">
-              {{radio-button
-              name='organisations_own_purpose'
-              id="benificiery"
-              value="benificiery"
-              selection=selectedId
-              required='true'}}
-            <label class="radio-button-text align-text">
-              For a client/benificiary
-            </label>
-          </div>
-        </div>
-      <div class="row people-count">
-          <div class="small-12 medium-9 large-9 columns people-count-label">
-            How many people will benefit from these items?
-          </div>
-          <div class="small-12 columns">
-              <div class="small-12 people-count-input">
-                {{#form-control}}
-                  {{input type='number' value=position placeholder=positionPlaceholder required='true'}}
-                  <div class='input-error'>You must input a number here</div>
-                {{/form-control}}
-              </div>
-          </div>
+<section class="main-section request-purpose">
+  {{#validatable-form onSubmit=(action 'saveBenificieryDetails') as |form|}}
+      <div class="small-12 medium-9 large-9 columns">
+        Purpose of Goods
       </div>
-      <div class="row description-of-need">
-        <div class="small-12 medium-9 large-9 columns description">
-          Description of need
+      <div class="row time_inputs purpose" >
+
+        <div class=" custom_radio_buttons small-12 columns purpose" for="For organisation's own purpose">
+            {{radio-button
+            name="selectReason"
+            id="own"
+            value="own"
+            selection=selectedId
+            required='true'}}
+          <label class="radio-button-text align-text">
+            For organisation's own programs
+          </label>
         </div>
-        <div class="small-12 medium-9 large-9 columns reason-of-need">
-          Please briefly describe why goods are needed.
+
+        <div class=" custom_radio_buttons small-12 columns purpose end" for="For benificiery">
+            {{radio-button
+            name="selectReason"
+            id="benificiery"
+            value="benificiery"
+            selection=selectedId
+            required='true'}}
+          <label class="radio-button-text align-text">
+            For a client/benificiary
+          </label>
         </div>
-        {{#form-control}}
-          <i class="fa fa-times-circle remove-text" aria-hidden="true" {{action "clearDescription"}}></i>
-          {{auto-resize-textarea data-autoresize=true name="description" value=description required="required" pattern=".*\S.*" id="description"}}
-          <div class='input-error'>Description cannot be blank.</div>
-        {{/form-control}}
       </div>
-      <div class="row">
+    <div class="row people-count">
+        <div class="small-12 medium-9 large-9 columns people-count-label">
+          How many people will benefit from these items?
+        </div>
         <div class="small-12 columns">
-          <a {{action 'submit' target=form}} class="button expand">Continue</a>
+            <div class="small-12 people-count-input">
+              {{#form-control}}
+                {{input type='number' value=peopleCount required='true'}}
+                <div class='input-error'>You must input a number here</div>
+              {{/form-control}}
+            </div>
         </div>
+    </div>
+    <div class="row description-of-need">
+      <div class="small-12 medium-9 large-9 columns description">
+        Description of need
       </div>
-    {{/validatable-form}}
-  </section>
+      <div class="small-12 medium-9 large-9 columns reason-of-need">
+        Please briefly describe why goods are needed.
+      </div>
+      {{#form-control}}
+        <i class="fa fa-times-circle remove-text" aria-hidden="true" {{action "clearDescription"}}></i>
+        {{auto-resize-textarea data-autoresize=true name="description" value=description required="required" pattern=".*\S.*" id="description"}}
+        <div class='input-error'>Description cannot be blank.</div>
+      {{/form-control}}
+    </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <a {{action 'submit' target=form}} class="button expand">Continue</a>
+      </div>
+    </div>
+  {{/validatable-form}}
+</section>
 
