--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,5 +28,6 @@
 @import "templates/package_category";
 @import "templates/item";
 @import "templates/login";
+@import "templates/client_information";
 @import "components/logo-banner";
 @import "ember_offline";
