--- a/app/templates/request/hk_identity_type_details.hbs
+++ b/app/templates/request/hk_identity_type_details.hbs
@@ -5,19 +5,21 @@
   You do not need to include number in brackets
 </div>
 <div class="row hk-id">
-  <div class="small-3 medium-9 large-9 columns">
-    <label> P12 </label>
-  </div>
-  <div class="columns small-3">
-    {{#form-control}}
-      {{input type='number' value=peopleCount required='true'}}
-    {{/form-control}}
-  </div>
-  <div class="columns small-6">
-    (*)
+  <div class="small-12 columns">
+    <div class="small-3 medium-9 large-9 columns">
+      <label> P12 </label>
+    </div>
+    <div class="columns small-3">
+      {{#form-control}}
+        {{input type='number' value=peopleCount required='true'}}
+      {{/form-control}}
+    </div>
+    <div class="columns small-6">
+      (*)
+    </div>
+    <div class='small-12 columns input-error type-of-id-text'>Please input number only</div>
   </div>
 </div>
-<div class='small-12 columns input-error type-of-id-text'>Please input number only</div>
 
 <div class='row client-name-labels'>
   <div class="columns small-2">
