--- a/app/styles/_request_purpose.scss
+++ b/app/styles/_request_purpose.scss
@@ -4,7 +4,7 @@
     margin-top: 1rem;
   }
   .input-error {
-    background: #ED4C4E;
+    background: #ED4C4E !important;
     color: white;
     padding: 0.2rem;
     display: none;
