--- a/app/templates/request/hk_identity_type_details.hbs
+++ b/app/templates/request/hk_identity_type_details.hbs
@@ -6,16 +6,16 @@
 </div>
 <div class="row hk-id">
   <div class="small-12 columns">
-    <div class="small-3 medium-9 large-9 columns">
+    <div class="small-3 medium-9 large-9 columns p12">
       <label> P12 </label>
     </div>
     <div class="columns small-3">
       {{#form-control}}
-        {{input type='number' value=peopleCount required='true'}}
+        {{numeric-input name="hk_id" id="hk-id-number" value=peopleCount maxlength="4" placeholder="XXXX" required='true'}}
       {{/form-control}}
     </div>
-    <div class="columns small-6">
-      (*)
+    <div class="columns small-6 x-with-brackets">
+      (X)
     </div>
     <div class='small-12 columns input-error type-of-id-text'>Please input number only</div>
   </div>
@@ -41,17 +41,17 @@
 <div class="row client-name-inputs">
   <div class="columns small-2">
     {{#form-control}}
-      {{input type='number' value=peopleCount required='true'}}
+      {{input type='text' id="title" value=title required='true'}}
     {{/form-control}}
   </div>
   <div class="columns small-5">
     {{#form-control}}
-      {{input type='number' value=peopleCount required='true'}}
+      {{input type='text' value=firstName required='true'}}
     {{/form-control}}
   </div>
   <div class="columns small-5">
     {{#form-control}}
-      {{input type='number' value=peopleCount required='true'}}
+      {{input type='text' value=lastName required='true'}}
     {{/form-control}}
   </div>
 </div>
@@ -63,11 +63,19 @@
   <div class="small-12 medium-9 large-9 columns id-confidential-text">
     We will use this number to confirm schedule and details.
   </div>
-  <div class="columns small-12">
+  <div class="row">
     {{#form-control}}
-      {{input type='number' value=peopleCount required='true'}}
+      <div class="row client-name-inputs">
+        <div class="small-3 large-1 columns">
+          <span class="prefix">+852</span>
+        </div>
+        <div class="small-9 large-11 columns">
+          {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
+        </div>
+      </div>
     {{/form-control}}
   </div>
+
   <div class="row">
     <div class="small-12 columns">
       <a {{action 'submit' target=form}} class="button expand">Continue</a>
