--- a/app/styles/templates/_client_information.scss
+++ b/app/styles/templates/_client_information.scss
@@ -49,7 +49,7 @@ div .hk-id{
     margin-bottom: 0;
   }
   .input-error {
-    background: #ED4C4E !important;
+    background: #ED4C4E ;
     color: white;
     padding: 0.2rem;
     display: none;
