--- a/app/templates/request/rbcl_identity_type_details.hbs
+++ b/app/templates/request/rbcl_identity_type_details.hbs
@@ -1,13 +1,13 @@
 <div class="small-12 medium-9 large-9 columns type-of-id-text">
-  Input the last 4 digits of the client's HKID
+  Input recognizance form ID [Numbers Only]
 </div>
 <div class="small-12 medium-9 large-9 columns id-confidential-text">
-  You do not need to include number in brackets
+  Numbers appear after four letters e.g "RBCL"
 </div>
 <div class="row hk-id">
   <div class="small-12 columns">
     <div class="small-3 medium-9 large-9 columns p12">
-      <label> P12 </label>
+      <label> RBCL </label>
     </div>
     <div class="columns small-3">
       {{#form-control}}
@@ -15,12 +15,9 @@
       {{/form-control}}
     </div>
     <div class="columns small-6 x-with-brackets">
-      (X)
+      / XX
     </div>
     <div class='small-12 columns input-error type-of-id-text'>Please input number only</div>
   </div>
 </div>
 <br>
-
-
-
